# shadowvpn-ios

./: .gitignore  .swiftformat  .swiftlint.yml  DESIGN.md  README.md  project.yml
App/: App.entitlements  Info.plist
App/Resources/en.lproj/: Localizable.strings
App/Resources/zh-Hans.lproj/: Localizable.strings
App/Sources/: AppModel.swift  BridgingHeader.h  ShadowVPNApp.swift
App/Sources/Models/: EditableProfile.swift
App/Sources/Services/: ChnrouteStager.swift  VpnManager.swift
App/Sources/Views/: ContentView.swift  GlassCard.swift  HomeView.swift  LogsView.swift  ProfileEditorView.swift  ProfilesView.swift  QRScannerView.swift  SettingsView.swift
PacketTunnel/: Info.plist
PacketTunnel/Sources/: BridgingHeader.h  PacketTunnelProvider.h  PacketTunnelProvider.m  SVAppGroup.h  SVAppGroup.m  SVDarwinBridge.h  SVDarwinBridge.m  SVEngineLog.h  SVEngineLog.m  SVIPCListener.h  SVIPCListener.m  SVPacketWriter.h  SVPacketWriter.m  SVSharedStore.h  SVSharedStore.m  SVTunnelEngine.h  SVTunnelEngine.m  SVTunnelSettings.h  SVTunnelSettings.m
SVPNShared/: Package.swift
SVPNShared/Sources/SVPNIPC/: DarwinNotifications.swift  SharedStore.swift
SVPNShared/Sources/SVPNModels/: AppGroup.swift  Preferences.swift  Profile.swift  ProfileURI.swift  VpnState.swift
SVPNShared/Tests/SVPNSharedTests/: ProfileTests.swift  ProfileURITests.swift  VpnStateTests.swift
ShadowVPNCore/include/: shadowvpn_core.h
Shared/Resources/: Country.mmdb  chnroute.txt  gfwlist.txt
core/rust/chnroute-gen/: Cargo.toml
core/rust/chnroute-gen/src/: main.rs
core/rust/shadowvpn-ios-ffi/: Cargo.toml  build.rs  cbindgen.toml
core/rust/shadowvpn-ios-ffi/include/: shadowvpn_core.h
core/rust/shadowvpn-ios-ffi/src/: config.rs  dns_intercept.rs  engine.rs  lib.rs  logging.rs
docs/: PENDING-runtime-country.md  index.html
fastlane/: Deliverfile
scripts/: build-rust.sh  gen-gfwlist.sh  generate-xcodeproj.sh
scripts/asc/: ExportOptions.plist  metadata.json  push_metadata.py
